refactor: Amélioration du code